--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "node dist/index.js",
     "build": "tsc"
   },
+  "prisma": {
+    "seed": "ts-node --esm prisma/seed.ts"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -16,10 +19,11 @@
     "@prisma/client": "^6.12.0",
     "@types/bcrypt": "^6.0.0",
     "@types/jsonwebtoken": "^9.0.10",
-    "bcrypt-ts": "^6.0.0",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
