chore: add vercel.json

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "tsc"
   },
   "prisma": {
-    "seed": "ts-node --esm prisma/seed.ts"
+    "seed": "ts-node prisma/seed.ts"
   },
   "keywords": [],
   "author": "",
