chore: configure to deploy in vercel

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "module": "CommonJS",
     "strict": true,
     "skipLibCheck": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "moduleResolution": "Bundler",
   },
   "include": ["**/*"],
   "exclude": ["node_modules", "dist"]
