chore: configure to deploy in vercel

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,9 @@
 {
-    "rewrites": [
-        {"source": "/(.*)", "destination": "/"}
-    ]
+  "version": 2,
+  "builds": [
+    { "src": "src/api/index.ts", "use": "@vercel/node" }
+  ],
+  "routes": [
+    { "src": "/api/(.*)", "dest": "src/api/index.ts" }
+  ]
 }
