--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,7 @@
     "module": "CommonJS",
     "strict": true,
     "skipLibCheck": true,
-    "esModuleInterop": true,
-    "moduleResolution": "Node",
+    "esModuleInterop": true
   },
   "include": ["**/*"],
   "exclude": ["node_modules", "dist"]
