--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,5 @@
 {
   "version": 2,
-  "builds": [
-    { "src": "src/api/index.ts", "use": "@vercel/node" }
-  ],
-  "routes": [
-    { "src": "/api/(.*)", "dest": "src/api/index.ts" }
-  ]
+  "builds": [{ "src": "src/index.ts", "use": "@vercel/node"}],
+  "routes": [{ "src": "/(.*)", "dest": "/"}]
 }
