--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,4 @@
 {
   "version": 2,
-  "rewrites": [{ "source": "/(.*)", "dest": "/api"}]
+  "rewrites": [{ "source": "/(.*)", "destination": "/api"}]
 }
