--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,6 @@
     "skipLibCheck": true,
     "esModuleInterop": true
   },
-  "include": ["src/*.ts", "**/*"],
+  "include": ["api/*.ts", "**/*"],
   "exclude": ["node_modules", "dist"]
 }
